tests/ui.old/fail_num_of_generic_parameters_differ.stderr
error: number of generic parameters must coinside:
           in definition of trait         = < T >
           in definition of derive target = < u8, u16 >
  --> tests/ui/fail_num_of_generic_parameters_differ.rs:25:39
   |
25 | #[thin_delegate::derive_delegate(Hello<u8, u16>)]
   |                                       ^^^^^^^^^
